labs/hibernating-masters/k8s-manifests/managed-master-hibernation-monitor.yml
---
# Source: cloudbees-core/templates/managed-master-hibernation-monitor-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: managed-master-hibernation-monitor
  labels:
    app.kubernetes.io/instance: "release-name"
    app.kubernetes.io/name: "cloudbees-core"
    app: managed-master-hibernation-monitor
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8090
    # TODO is nodePort needed?
  selector:
    # TODO does this need to be made specific to release somehow?
    app: managed-master-hibernation-monitor
  # TODO consider OperationsCenter.ServiceType
  type: ClusterIP
---
# Source: cloudbees-core/templates/managed-master-hibernation-monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managed-master-hibernation-monitor
  labels:
    app: managed-master-hibernation-monitor
    app.kubernetes.io/instance: "release-name"
    app.kubernetes.io/name: "cloudbees-core"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: managed-master-hibernation-monitor
  template:
    metadata:
      labels:
        app: managed-master-hibernation-monitor
        app.kubernetes.io/instance: "release-name"
        app.kubernetes.io/name: "cloudbees-core"
    spec:
      affinity:
        nodeAffinity:
          # Schedule on Linux nodes only.
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/os
                operator: In
                values:
                  - linux
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              # Prefer nodes where there are no masters
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: com.cloudbees.cje.type
                      operator: In
                      values:
                        - master
      containers:
      - name: managed-master-hibernation-monitor
        image: cloudbees/managed-master-hibernation-monitor:201.ad3b50f73a59
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8090
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8090
          periodSeconds: 30
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8090
          periodSeconds: 30
          timeoutSeconds: 30
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            memory: 250Mi
      serviceAccountName: managed-master-hibernation-monitor
---
# Source: cloudbees-core/templates/managed-master-hibernation-monitor-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: managed-master-hibernation-monitor
  labels:
    app.kubernetes.io/instance: "release-name"
    app.kubernetes.io/name: "cloudbees-core"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "kmadel.cb-sa.io"
    http:
      paths:
      - path: /hibernation
        backend:
          serviceName: managed-master-hibernation-monitor
          servicePort: 80
